Update tcpProxy.sh